Bug 1248974 - Remove gtk_style_context_save which corrupts style hierarchy for menu item background, r=karlt